# AI_SRE

./: .gitignore  PROMPT.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
Anomaly_Detection/: Dockerfile  incident_report1.json  main.py  pyproject.toml  requirements.txt
Anomaly_Detection/reports/: incident_20260329_065426.json  incident_20260329_065427.json  incident_20260329_065430.json  incident_20260329_065441.json  incident_20260329_065496.json  incident_20260329_065527.json  incident_20260329_065656.json  incident_20260329_065712.json  incident_report1.json
anomaly_detction/: Dockerfile  package-lock.json  package.json
anomaly_detction/reports/: incident_20260402181003..json
anomaly_detction/src/: main.ts
application/: .gitignore  app.js  index.ts  instrumentation.js  package.json
application/src/: database.js  server.js  utils.js
application2/: .gitignore  README.md
application2/src/: database.js  server.js
buggy_application/: Dockerfile  index.ts  package.json  test.ts  test5.ts  test_express.ts
buggy_application/src/: utils.js
docker/: docker-compose.yml  otel-config.yaml
patcher-rag/: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
patcher-rag/lib/: db.ts
rag/: .gitignore  auto_patcher.py  main.py  pyproject.toml
rag/chroma_db/: chroma.sqlite3
sre_anamoly_system/: README.md  package.json
sre_anomaly/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  prompt.md
web/: .dockerignore  API_DOCUMENTATION.md  Dockerfile  package-lock.json  package.json
(+78 files in other folders)
